订单时间优化，增加了关于时间的表

--- a/src/main/resources/templates/admin/data_display/list.html
+++ b/src/main/resources/templates/admin/data_display/list.html
@@ -42,14 +42,15 @@
     myChart.setOption(option);
 
     function setTabledata(){
-        console.log("111111111111")
         $.ajax({
-            url: "/admin/data_display/product_data.do",
+            url: "/mall/admin/data_display/product_data.do",
             type: "get",
             success: function (result) {
                 console.log(result);
+                var arrayObj = new Array();
             }
         });
+        console.log("111111111111")
     }
 </script>
 </body>
