--- a/src/main/resources/templates/admin/order/list.html
+++ b/src/main/resources/templates/admin/order/list.html
@@ -49,6 +49,7 @@
                         <th>收货人</th>
                         <th>订单状态</th>
                         <th>订单时间</th>
+                        <th>收货地址</th>
                         <th width="50%">订单详情</th>
                     </tr>
                     </thead>
@@ -72,7 +73,7 @@
 <script th:src="@{/js/app.js}" type="text/javascript"></script>
 <script th:src="@{/js/jquery.pagination.js}" type="text/javascript"></script>
 <script th:inline="javascript" type="text/javascript">
-//    <![CDATA[
+    //    <![CDATA[
     var pagetotal;
     $(function () {
         App.init();
@@ -136,6 +137,7 @@
                 tr.append($("<td></td>").html('<span style="border-radius: 5px !important;" class="label label-default">未知状态</span>'));
             }
             tr.append($("<td></td>").html('<span class="label label-default" style="border-radius: 5px !important;">' + data[i].orderTime + '</span>'));
+            tr.append($("<td></td>").text(data[i].addr))
             tr.append($("<td></td>")
                 .append($('<div style="margin:0;" class="portlet box green"><div id="detail_' + i + '" onmouseenter="getDetail(' + data[i].id + ',\'detail_' + i + '\')" class="portlet-title"><div class="caption">订单详情</div><div class="tools"><a href="" class="expand" style="color: #FFFFFF;"><i class="fa fa-caret-down"></i></a></div></div><div class="portlet-body" style="display: none;"><table class="table table-bordered table-hover"></table></div></div>')));
             tbody.append(tr);
@@ -199,7 +201,8 @@
             }
         });
     }
-//    ]]>
+
+    //    ]]>
 </script>
 </body>
 
