--- a/src/main/resources/templates/admin/order/list.html
+++ b/src/main/resources/templates/admin/order/list.html
@@ -21,7 +21,7 @@
 <body>
 <div class="container-fluid">
     <div class="row-fluid">
-        <h3 class="page-title"><i class="fa fa-file-text"></i> 订单管理</h3>
+        <h3 class="page-title"><i class="fa fa-file-text"></i> 营业管理</h3>
         <ul class="breadcrumb">
             <li>
                 <a href="#"><i class="fa fa-home"></i>订单管理</a>
