--- a/src/main/resources/templates/admin/warehouse/list.html
+++ b/src/main/resources/templates/admin/warehouse/list.html
@@ -21,14 +21,14 @@
 <body>
 <div class="container-fluid">
     <div class="row-fluid">
-        <h3 class="page-title"><i class="fa fa-file-text"></i> 营业管理</h3>
+        <h3 class="page-title"><i class="fa fa-file-text"></i> 仓库管理</h3>
         <ul class="breadcrumb">
             <li>
-                <a href="#"><i class="fa fa-home"></i>订单管理</a>
+                <a href="#"><i class="fa fa-home"></i>出库管理</a>
                 <i class="fa fa-angle-right"></i>
             </li>
             <li>
-                <a href="#">订单列表</a>
+                <a href="#">出货列表</a>
             </li>
         </ul>
     </div>
@@ -44,13 +44,13 @@
                 <table id="orderTable" class="table table-advance table-hover">
                     <thead>
                     <tr>
-                        <th>订单编号</th>
-                        <th>订单金额</th>
-                        <th>收货人</th>
-                        <th>订单状态</th>
-                        <th>订单时间</th>
+                        <!--<th>订单编号</th>-->
+
+                        <!--<th>收货人</th>-->
+
+                        <th>出货时间</th>
                         <th>收货地址</th>
-                        <th width="50%">订单详情</th>
+                        <th width="50%">货物详情</th>
                     </tr>
                     </thead>
                     <tbody>
@@ -121,25 +121,26 @@
         tbody.html("");
         for (var i = 0; i < data.length; i++) {
             var tr = $("<tr style='display:none;'></tr>");
-            tr.append($("<td></td>").text(data[i].id));
-            tr.append($("<td></td>").text("￥" + data[i].total));
-            tr.append($("<td></td>").text(data[i].name == null ? '' : data[i].name));
-            var state = data[i].state;
-            if (state == 1) {
-                tr.append($("<td></td>").html('<span style="border-radius: 5px !important;" class="label label-important">未付款</span>'));
-            } else if (state == 2) {
-                tr.append($("<td></td>").html("<button onclick='send(" + data[i].id + ",this)' style='border-radius: 5px !important;'  class='label label-warning'>发货</button>"));
-            } else if (state == 3) {
-                tr.append($("<td></td>").html('<span style="border-radius: 5px !important;" class="label label-info">等待收货</span>'));
-            } else if (state == 4) {
-                tr.append($("<td></td>").html('<span style="border-radius: 5px !important;" class="label label-success">订单完成</span>'));
-            } else {
-                tr.append($("<td></td>").html('<span style="border-radius: 5px !important;" class="label label-default">未知状态</span>'));
-            }
+            // tr.append($("<td></td>").text(data[i].id));
+            // tr.append($("<td></td>").text("￥" + data[i].total));
+            // tr.append($("<td></td>").text(data[i].name == null ? '' : data[i].name));
+            // var state = data[i].state;
+            // if (state == 1) {
+            //     tr.append($("<td></td>").html('<span style="border-radius: 5px !important;" class="label label-important">未付款</span>'));
+            // } else if (state == 2) {
+            //     tr.append($("<td></td>").html("<button onclick='send(" + data[i].id + ",this)' style='border-radius: 5px !important;'  class='label label-warning'>发货</button>"));
+            // } else if (state == 3) {
+            //     tr.append($("<td></td>").html('<span style="border-radius: 5px !important;" class="label label-info">等待收货</span>'));
+            // } else if (state == 4) {
+            //     tr.append($("<td></td>").html('<span style="border-radius: 5px !important;" class="label label-success">订单完成</span>'));
+            // } else {
+            //     tr.append($("<td></td>").html('<span style="border-radius: 5px !important;" class="label label-default">未知状态</span>'));
+            // }
             tr.append($("<td></td>").html('<span class="label label-default" style="border-radius: 5px !important;">' + data[i].orderTime + '</span>'));
             tr.append($("<td></td>").text(data[i].addr))
             tr.append($("<td></td>")
-                .append($('<div style="margin:0;" class="portlet box green"><div id="detail_' + i + '" onmouseenter="getDetail(' + data[i].id + ',\'detail_' + i + '\')" class="portlet-title"><div class="caption">订单详情</div><div class="tools"><a href="" class="expand" style="color: #FFFFFF;"><i class="fa fa-caret-down"></i></a></div></div><div class="portlet-body" style="display: none;"><table class="table table-bordered table-hover"></table></div></div>')));
+                .append($('<div style="margin:0;" class="portlet box green"><div id="detail_' + i + '" onmouseenter="getDetail(' + data[i].id + ',\'detail_' + i + '\')" class="portlet-title"><div class="caption">货物详情</div><div class="tools"><a href="" class="expand" style="color: #FFFFFF;"><i class="fa fa-caret-down"></i></a></div></div><div class="portlet-body" style="display: none;"><table class="table table-bordered table-hover"></table></div></div>')));
+            // tr.append($("<td></td>").text(data.list[i].addr))
             tbody.append(tr);
             tr.fadeIn();
         }
@@ -167,7 +168,7 @@
                         tr.append($("<td><img style='display: block;height: 50px;max-width: 100%;' src='" + item.product.image + "'/></td>"));
                         tr.append($("<td ></td>").text(item.product.title));
                         tr.append($("<td></td>").text(item.count + "件"));
-                        tr.append($("<td></td>").text("￥" + item.subTotal));
+                        // tr.append($("<td></td>").text("￥" + item.subTotal));
                         $(div).next().find("table").append(tr);
                     }
                 } else {
